fixed some breaks on mobile after testing

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -61,12 +61,12 @@
     display: flex !important;
     flex: 1;
     overflow: hidden !important;
-    flex-direction: column-reverse !important;
+    flex-direction: column !important;
 }
   @media screen and (max-width: 600px) {
     ::ng-deep html {
-      --mat-expansion-header-text-size: 47px;
-      --mat-expansion-header-collapsed-state-height: 200px;
+      --mat-expansion-header-text-size: 12px;
+      --mat-expansion-header-collapsed-state-height: 50px;
       --mat-expansion-header-text-line-height: 35px;
     
     }
@@ -79,7 +79,7 @@
     }
 
     ::ng-deep.mat-expansion-panel-body {
-      font-size: 40px;
+      font-size: 14px;
     }
   }
  
